Fix spacing on root page

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -53,6 +53,7 @@ section {
   background-color: #c5ffc7;
   background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png");
   padding-left: 100px;
+  padding-right: 100px;
 }
 
 .welcome1 {
